# pyai

./: .gitignore  LICENSE  LICENSE.txt  README.md  TODO.md  __init__.py  activations.py  conventions.md  dense.vars  digit_drawing.py  digits.py  handwritten_digits.py  layers.py  loading_test.py  losses.py  multi_channel_conv_test.py  network.py  package-test.py  package_test.py  pyproject.toml  ruff.toml  single_stride_conv_test.py  spam_classification.py  tensorflow_test.py  tensorflow_testing.py  todo.md  weight_initialisers.py
backend/: __init__.py  progress_bar.py  utilities.py
epq/: existing_network.py  main.py  matrix.py  network.py  progressbar.py  tensorflow_experiments.py
feature_extraction/: __init__.py
feature_extraction/text/: __init__.py  count_vectoriser.py
nn/: __init__.py  copied_network.py  layer.py  main.py  mnist_loader.py  network.py  numpy_layer.py  numpy_network.py
nn/activations/: __init__.py  activation.py  leaky_relu.py  linear.py  relu.py  sigmoid.py  softmax.py  tanh.py
nn/backend/: __init__.py  activations.py  losses.py  regularisers.py
nn/initialisers/: __init__.py  constant.py  glorot.py  he.py  initialiser.py  random.py
nn/layers/: __init__.py  activation.py  averagepooling2d.py  conv2d.py  dense.py  dropout.py  flatten.py  layer.py  maxpooling2d.py
nn/losses/: __init__.py  binary_crossentropy.py  categorical_crossentropy.py  loss.py  mean_squared_error.py
nn/optimisers/: __init__.py  adadelta.py  adagrad.py  adam.py  adamax.py  adamw.py  nadam.py  optimiser.py  rmsprop.py  sgd.py
nn/regularisers/: __init__.py  l1.py  l1l2.py  l2.py  regulariser.py
preprocessing/: __init__.py  label_binariser.py  ordinal_encoder.py
pyai/: __init__.py  network.py
pyai/activations/: __init__.py  activation.py  linear.py  relu.py  sigmoid.py  softmax.py  tanh.py
pyai/backend/: __init__.py  activations.py  losses.py  progress_bar.py  (+2 more)
reinforcement/: __init__.py
rl/: __init__.py
search/: __init__.py
sl/: __init__.py
supervised/: __init__.py
testing/: conv_test.py  dilation.py  new_stridedconv_test.py  package_test.py  pooling_test.py  stridedconv2d.py  tensorflow_test.py
(+156 files in other folders)
